--- a/Services/DemoAPI/WebApp/Views/Home/Index.cshtml
+++ b/Services/DemoAPI/WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IndexViewModel
+@{
+    ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<style>
+    body {
+        background-color: @Model.Settings.BackgroundColor;
+    }
+
+    h1 {
+        color: @Model.Settings.FontColor;
+        font-size: @Model.Settings.FontSize;
+    }
+</style>
+
+<h1>@Model.Settings.Message</h1>
