--- a/Services/DemoAPI/WebApp/Views/Shared/_Layout.cshtml
+++ b/Services/DemoAPI/WebApp/Views/Shared/_Layout.cshtml
@@ -22,6 +22,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <feature name="Beta">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Index">Beta</a>
+                            </li>
+                        </feature>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
