--- a/Services/DemoAPI/WebApp/Views/Shared/_Layout.cshtml
+++ b/Services/DemoAPI/WebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         </li>
                         <feature name="Beta">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Index">Beta</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Beta" asp-action="Index">Beta</a>
                             </li>
                         </feature>
                         <li class="nav-item">
