--- a/Services/DemoAPI/WebApp/Views/Beta/Index.cshtml
+++ b/Services/DemoAPI/WebApp/Views/Beta/Index.cshtml
@@ -1,17 +1,7 @@
-﻿@model IndexViewModel
+﻿
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Beta page";
 }
 
-<style>
-    body {
-        background-color: @Model.Settings.BackgroundColor;
-    }
-
-    h1 {
-        color: @Model.Settings.FontColor;
-        font-size: @Model.Settings.FontSize;
-    }
-</style>
 
 <h1>BETA FEATURE</h1>
